--- a/configs/Demo/demo.yaml
+++ b/configs/Demo/demo.yaml
@@ -1,5 +1,5 @@
 dataset: 'scannet'
-sync_method: loose
+sync_method: strict #loose
 coarse: True
 verbose: True
 meshing:
@@ -18,7 +18,7 @@ mapping:
   every_frame: 10
   vis_freq: 50
   vis_inside_freq: 30
-  mesh_freq: 50
+  mesh_freq: 1 
   ckpt_freq: 500
   keyframe_every: 50
   mapping_window_size: 10
